Adicionando Aplicação Console; Tranformando dotnet-series em biblioteca; implementando api Asp.NET

--- a/dotnet-series/dotnet-series.csproj
+++ b/dotnet-series/dotnet-series.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>dotnet_series</RootNamespace>
+    <Nullable>annotations</Nullable>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
